--- a/marcoruch_ch/src/index.scss
+++ b/marcoruch_ch/src/index.scss
@@ -18,6 +18,7 @@ code {
 }
 
 #root {  
+  overflow-x: hidden;
   background-color:#181818;
 }
 
